<?xml version="1.0"?>
<package format="2">
  <name>librosasio</name>
  <version>0.0.1</version>
  <description>Library that merges the ROS and Boost.Asio event loops in single thread.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="axd@todo.todo">axd</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>libboost-system-dev</depend>

</package>
